# voice-expense-tracker

./: .gitignore  README.md  README_TEMP.md  check_db_setup.py  config.py  docker-compose.yml  project_structure  pyproject.toml  requirements.txt  run.py  setup_env.py  technical_requirements.md  test_db.py  test_transcriber.py  todo.txt
ai_agent/: __init__.py  analytics_agent.py  expense_parser.py  expenses_agent.py  intent_classifier.py  open_ai_analytics_agent.py  open_ai_expense_parser.py  open_ai_intent_classifier.py
db/: __init__.py  database.py  models.py  queries.py
docs/: business_requirements.md  prd.md  project_structure  todo.txt
examples/: openai_expense_parser_example.py
telegram_bot/: __init__.py  bot.py  handlers.py  message_processor.py
tests/: __init__.py  integration_test_parser.py  test_ai_agent.py  test_analytics_agent.py  test_expense_parser.py  test_expenses_agent.py  test_intent_classifier.py  test_openai_expense_parser.py  test_transcriber_unit.py  test_whisper_transcriber.py
tools/: intent_classifier.py  transcriber.py  translator.py
whisper_transcriber/: __init__.py  transcriber.py
