[tool.poetry]
name = "voice-expense-tracker"
version = "0.1.0"
description = "Voice Expense Tracker - AI-бухгалтер у Telegram (UA Edition)"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.7"
langchain = "^0.1.11"
openai = "^1.23.0"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
langchain-openai = "^0.0.8"
langchain-core = "^0.1.30"
langchain-community = "^0.0.29"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.1.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
